pom.xml: Bump the version to 1.0