@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.piccode</groupId>
 	<artifactId>PiccodeScript</artifactId>
-	<version>0.3</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -217,11 +217,6 @@
 		  <groupId>org.apache.maven.plugins</groupId>
 		  <artifactId>maven-compiler-plugin</artifactId>
 		  <version>3.11.0</version>
-		  <configuration>
-		   <compilerArgs>
-		    <arg>--enable-preview</arg>
-		   </compilerArgs>
-		  </configuration>
 		 </plugin>
 		</plugins>
 
